
Slick 7.x-2.0-dev, 2015-2-26
----------------------------
Issue #2438041 by RAFA3L: Fixed broken Views style plugin due to removal of
  files array from slick_views.info:
  files[] = slick_views_plugin_style_slick.inc
  Be sure to clear the cache to bring it back. The mistake was after PHPCS fixes.
Fixed edge cases for slide--current class by requesting anonymous parent selector
  with/without theme_slick_wrapper(), and with/without asnavFor.
Optimized slick.elements.inc, and moved slick form elements from
  slick_get_options() to the plugin page - SlickOptionsetUi.class.php.
  The following functions are moved to slick.admin.inc:
  - _slick_easing_options()
  - _slick_css_easing_options()
  - _slick_css_easing_mapping()
Fixed undefined $overlay_style notice with Field collection nested slicks.

Slick 7.x-2.0-dev, 2015-2-25
----------------------------
Fixed various PHPCS complains, except the helpless CTools lowerCamel formats and
  CSS multiline selectors due to Sass bug :unix_newlines never applied, nor
  proper line break after decendant selectors.

Slick 7.x-2.0-dev, 2015-2-24
----------------------------
Simplified slick.tpl.php markups for when only 1 item is available.
Fixed slick.theme.css and slick.load.min.js to support nested slicks. Be sure
  to re-check your CSS with the new specifity introduced by nested slicks.
  Mostly related to .slide__caption and .slide__media classes e.g.:
  Before:
  .slide--caption--below .slide__caption {}
  After:
  .slide--caption--below > .slide__content > .slide__caption {}

  This allows child slicks within a slick to have proper skins, rather than
  being overridden by the parent slick.

Fixed for nested slicks, slicks within a slick for Field collection and Views.
Fixed RTL attributes from the .slick to .slick-slider to reflect Slick 1.4.

Slick 7.x-2.0-dev, 2015-2-20
----------------------------
Changed admin assests to use slick.admin library. Clear cache if trouble to see
  the admin styling.